<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignUpView">

    <Button
        android:id="@+id/loginbtn2"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToLoginScreen"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Soleil"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp2" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="379dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:text="@string/signUpEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordSignUp2"
        android:layout_width="379dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPersonName"
        android:text="@string/signUpPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp1" />

    <Button
        android:id="@+id/Soleil"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:onClick="createUserAccount"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp2" />

    <EditText
        android:id="@+id/passwordSignUp1"
        android:layout_width="378dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName"
        android:text="@string/signUpPassword1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginBottom="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>